--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-drawer-layout": "^1.3.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
@@ -43,6 +44,10 @@
       "parser": "babel-eslint"
     },
     "rules": {}
+  },
+  "prettier":{
+    "tabWidth": 2,
+    "singleQuote": true
   },
   "browserslist": [
     "> 1%",
