--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/cli-service": "^4.5.13",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-drawer-layout": "^1.3.0",
@@ -19,7 +20,6 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
@@ -45,7 +45,7 @@
     },
     "rules": {}
   },
-  "prettier":{
+  "prettier": {
     "tabWidth": 2,
     "singleQuote": true
   },
