--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@splidejs/splide": "^3.0.3",
+    "@splidejs/splide-extension-video": "^0.5.0",
+    "@splidejs/vue-splide": "^0.3.5",
     "@vue/cli-service": "^4.5.13",
+    "@vue/composition-api": "^1.2.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-drawer-layout": "^1.3.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
